Fix HTML footer and script closing tags

--- a/index.html
+++ b/index.html
@@ -1090,6 +1090,7 @@
             <p>&copy; 2023 Ludo Tournament. All rights reserved.</p>
         </div>
     </footer>
+</body>
 
     <script>
         // Firebase Configuration
@@ -1104,3 +1105,4 @@
 
         // Initialize Firebase
         firebase.initialize
+            </script>
